Modificaciones de Textos Solicitados

--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h2 class="header center light-green-text text-darken-4">Nuevos Aires al Servicio del Aseo y el Reciclaje</h2>
+      <h2 class="header center light-green-text text-darken-4">Empresa de Aseo, Limpieza, Reparaciones y Mantención Brisa Verde</h2>
       <div class="row center">
         <h5 class="header col s12 light white-text" id="msn">
-          <p><i style="line-height:37px;">Somos una empresa responsable con el Medio Ambiente. </i></p>
-          <p><i style="line-height:37px;">Nos preocupa mejorar nuestra calidad de vida y </i></p>
-          <p><i style="line-height:37px;">Fomentar la Cultura de la No Basura</i></p></h5>
+         
+          <p><i style="line-height:37px;">Somos una empresa de servicios y soluciones para </i></p>
+          <p><i style="line-height:37px;">particulares y privados, conjugamos nuestros </i></p>
+          <p><i style="line-height:37px;">servicios con el cuidado ambiental</i></p></h5>
       </div>
       <div class="row center">
         <a href="#dec-serv" id="download-button" class="btn-large waves-effect waves-ligth green">Conoce Nuestros Servicios</a>
@@ -80,7 +81,9 @@
             </div>
             <div class="card-content">
               <p class="tit_span"><h3>Misión</h3></p>
-              <p>Ser una alternativa innovadora en servicios de aseo y reciclaje presentando a nuestros clientes un servicio comprometido con su salud y su entorno. Nuestras acciones van dirigidas a un medio ambiente mas limpio para todos.
+              <p>Ser una alternativa innovadora en los servicios de aseo y mantención para nuestros clientes, ofreciéndoles un
+servicio completo para satisfacer sus necesidades, con altos estándares de calidad, cuidado ambiental, modernidad
+y eficiencia.
                 </p>
             </div>
           </div>
@@ -109,9 +112,12 @@
               <img src="img/limpieza.jpg">
             </div>
             <div class="card-content">
-              <p class="tit_span"><h3>Aseo</h3></p>
-              <p>Utilizamos productos de aseo Eco-amigables, fabricados en base a plantas, son libres de químicos y seguros para personas y animales, nuestras maquinas de limpieza funcionan con vapor a altas temperaturas eliminando hongos, ácaros y bacterias.</n>
-                Nuestros servicios buscan impactar de forma mínima el medio ambiente.
+              <p class="tit_span"><h3>Aseo, Mantención y Reciclaje</h3></p>
+              <p>Proveemos a nuestros clientes servicios de limpieza con altos estándares de
+calidad y satisfacción, cuidamos la salud de las personas y al medio ambiente al utilizar solo insumos de limpieza
+100% biodegradables, nuestro servicio es para hogares, empresas e industrias, fomentamos el reciclaje al gestionar
+la adquisición de contenedores y retiro de residuos con recolectores de base en sus respectivas comunas, queremos
+ser parte de un cambio global comprometidos con el cuidado del planeta
                 </p>
             </div>
           </div>
@@ -124,8 +130,11 @@
               
             </div>
             <div class="card-content">
-              <p class="tit_span"><h3>Reciclaje</h3></p>
-              <p>Como empresa nos preocupamos de nuestros desechos y de los de  nuestros clientes, por lo cual, proporcionaremos contenedores para cada tipo de desecho, y a la vez, coordinaremos el retiro con recolectores informales, de forma de hacer mas dinámico el ciclo del reciclaje.
+              <p class="tit_span"><h3>Reparaciones y Remodelación</h3></p>
+              <p>Servicio diseñado para aquellos problemas que la limpieza no puede
+solucionar, asesorado por Arquitecto y Maestros especialistas, realizamos reparaciones para particulares, empresas
+e industrias, como: aislación térmica, impermeabilización de muros debido a problemas de humedad, pintura,
+cambios y reparación de pisos, renovación interior y exterior para muros, cocina, baños, habitaciones, etc.
                 </p>
             </div>
           </div>
@@ -141,7 +150,7 @@
     <div class="container" id="servicios">
 
       <div class="row">
-          <h5 class="tit_serv">Servicios Casas Particulares</h5>  
+          <h5 class="tit_serv">Servicios Particulares</h5>  
       </div>
 
       <div class="row">
@@ -191,15 +200,19 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Servicio Eco Hogar Full<i class="material-icons right">close</i></span>
+              <p>Ofrecemos a nuestros clientes servicios de limpieza, posibilidad de cotizar por
+reparaciones y mejoras. Opciones:</p>
               <ul class="">
-                <li class="">•  Limpieza completa en habitaciones y sala de estar</li>
-                <li class="">•  Desinfección con sistema a vapor en Baños</li>
-                <li class="">•  Desinfección y remoción de grasa con sistema a vapor en cocina y logia</li>
-                <li class="">•  Aseo en muebles, campana, refrigerador, y otros similares</li>
-                <li class="">•  Remoción de polvo, aspirado de alfombras y limpieza de pisos</li>
-                <li class="">•  Incluye terrazas, balcones, vidrios interiores y ventanales</li>
-                <li class="">•  Clasificación de residuos recolectados para posterior reciclaje</li>
-                <li class="">•  Incluye uso productos ecofriendly y biodegradables</li>
+                <li class="">•  Uso de productos 100% biodegradables.</li>
+                <li class="">•  Uso de máquinas de vapor.</li>
+                <li class="">•  Limpieza de habitaciones, living comedor, baños, cocina, logia.</li>
+                <li class="">•  Limpieza y lavado de tapices y alfombras.</li>
+                <li class="">•  Limpieza interior y exterior vidrios y ventanales.</li>
+                <li class="">•  Lavado de sillones.</li>
+                <li class="">•  Hidrolavado exterior fachadas.</li>
+                <li class="">•  Hidrolavado exterior terrazas y muebles de jardín.</li>
+                <li class="">•  Contenedores para reciclaje y gestión de retiro con recolectores de base</li>
+                <li class="">•  Cotización de reparaciones y mejoras.</li>
               </ul>
               <div class="col s12 center">
                 <p></p>
@@ -223,21 +236,25 @@
             </div>
             <div class="card-content center">
               <div class="row">
-                <span class="card-title activator grey-text text-darken-4">Servicio Full Oficina</span>
+                <span class="card-title activator grey-text text-darken-4">Sevicio Basico Eco Oficinas, Empresas e Industrias</span>
               </div>
               <div class="row">
                 <a class="btn-floating activator btn-medium waves-effect waves-light green"><i class="material-icons"> navigation</i></a>  
               </div>  
             </div>
             <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Servicio Full Oficina<i class="material-icons right">close</i></span>
+              <span class="card-title grey-text text-darken-4">Sevicio Basico Eco Oficinas, Empresas e Industrias<i class="material-icons right">close</i></span>
               <ul class="">
-                <li class="">•  Remoción de polvo de mobiliario, objetos de oficina, vitrinas, etc</li>
-                <li class="">•  Aspirado total</li>
-                <li class="">•  Vidrios interiores</li>
-                <li class="">•  Limpieza y desinfección con sistema a vapor en Baños</li>
-                <li class="">•  Limpieza, desinfección y remoción de grasa con sistema a vapor en sala de almuerzos</li>
-                <li class="">•  Incluye uso productos ecofriendly y biodegradables</li> 
+                <li class="">•  Suministro de personal periódico para realizar labores de mantención para oficinas y empresas, cuya labor será
+limpieza de pisos, vidrios, baños, cocina o casinos y mobiliario.</li>
+                <li class="">•  Uso de productos 100% biodegradables.</li>
+                <li class="">•  Limpieza y aspirado de pisos.</li>
+                <li class="">•  Uso de máquinas de vapor.</li>
+                <li class="">•  Limpieza de muros lavables.</li>
+                <li class="">•  Lavado de alfombras y tapices.</li> 
+                <li class="">•  Aspirado de muebles y alfombras.</li> 
+                <li class="">•  Opción a contratación estable de nuestro personal.</li> 
+                <li class="">•  Cotización de reparaciones y mejoras.</li> 
               </ul>
 
               <div class="col s12 center">
@@ -256,24 +273,31 @@
             </div>
             <div class="card-content center">
               <div class="row">
-                <span class="card-title activator grey-text text-darken-4">Servicio Full Empresas</span>
+                <span class="card-title activator grey-text text-darken-4">Sevicio Full Eco Oficinas, Empresas e Industrias</span>
               </div>
               <div class="row">
                 <a class="btn-floating activator btn-medium waves-effect waves-light green"><i class="material-icons"> navigation</i></a>  
               </div>  
             </div>
             <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Servicio Full Empresas<i class="material-icons right">close</i></span>
+              <span class="card-title grey-text text-darken-4">Sevicio Full Eco Oficinas, Empresas e Industrias<i class="material-icons right">close</i></span>
+              <p>Servicio de limpieza programada full acorde a necesidad
+del cliente, posibilidad de cotizar reparaciones y mejoras. Opciones.</p>
               <ul class="">
-                <li class="">•  Remoción de polvo de mobiliario, objetos de oficina, vitrinas, etc.</li>
-                <li class="">•  Aspirado total</li>
-                <li class="">•  Vidrios interiores</li>
-                <li class="">•  Limpieza y desinfección con sistema a vapor en Baños</li>
-                <li class="">•  Limpieza, desinfección y remoción de grasa con sistema a vapor en sala de almuerzos</li>
-                <li class="">•  Instalación de contenedores diferenciados</li>
-                <li class="">•  Clasificación de residuos recolectados para posterior reciclaje</li>
-                <li class="">•  Retiro de basura de contenedores diferenciados</li>
-                <li class="">•  Incluye uso productos ecofriendly y biodegradables</li>
+                <li class="">•  Suministro de personal estable para realizar labores de limpieza y mantención completa para empresas, oficinas e
+industrias.</li>
+                <li class="">•  Supervisión de operarios y feedback para la mejora continua del servicio.</li>
+                <li class="">•  Personal capacitado en prevención de riegos y medio ambiente.</li>
+                <li class="">•  Uso de productos 100% biodegradables.</li>
+                <li class="">•  Limpieza industrial de tapices, pisos y alfombras.</li>
+                <li class="">•  Limpieza de vidrios y ventanales.</li>
+                <li class="">•  Limpieza de casinos o áreas de comida.</li>
+                <li class="">•  Limpieza de baños.</li>
+                <li class="">•  Suministro de insumos de limpieza.</li>
+                <li class="">•  Uso de máquinas de vapor.</li>
+                <li class="">•  Cotización de reparaciones y mejoras.</li>
+                <li class="">•  Plan de reciclaje + contenedores para reciclaje + retiro de residuos para reciclaje por recolectores de base de las
+comunas.</li>
               </ul> 
               <div class="col s12 center">
                 <p></p>
@@ -291,30 +315,20 @@
     <div class="section" id="prin-contacto">
       <div id="contacto" class="container center">
         <div class="row">
-          <div class="col m6 s12">
+          <div class="col m12 s12">
             <div class="row">
-              <a href="https://www.facebook.com/EmpresaBrisaVerde/">
+              <a href="https://www.facebook.com/profile.php?id=100010720995990">
               <div id="link-fb" class="col m6 s12">
-                <a href="https://www.facebook.com/EmpresaBrisaVerde/" id="btn-fc" class="btn-floating btn-large waves-effect waves-light indigo">
+                <a href="https://www.facebook.com/profile.php?id=100010720995990" id="btn-fc" class="btn-floating btn-large waves-effect waves-light indigo">
                 <span class="icon-facebook"></span>
-                </a>
-              </div>
-              </a>
-              <a href="http://www.cl.linkedin.com/in/brisaverde">
-              <div id="link-tw" class="col m6 s12">
-                <a href="http://www.cl.linkedin.com/in/brisaverde" id="btn-tw" class="btn-floating btn-large waves-effect waves-light blue darken-2">
-                <span class="icon-linkedin2"></span>
                 </a>
               </div>
               </a>
             </div>
             <div class="row">
-              <div id="link-fb" class="col m6 s12 hide-on-small-only">
+              <div id="link-fb" class="col m12 s12 hide-on-small-only">
+              <a href="https://www.facebook.com/profile.php?id=100010720995990">
                 facebook.com/empresabrisaverde
-                </a>
-              </div>
-              <div id="link-tw" class="col m6 s12 hide-on-small-only">
-                Empresa Brisa Verde
                 </a>
               </div>
             </div>
@@ -405,6 +419,9 @@
           <ul>
             <li><br></li>
             <li><a href="http://www.carbonfootprint.com/" id="l">Mide tu Huella de Carbono!</a></li>
+            <li><a href="https://www.habitissimo.cl" id="l">HABITISSIMO</a></li>
+            <li><a href="http://www.guialimpieza.cl/" id="l">GUIALIMPIEZA.CL</a></li>
+            <li><a href="http://www.icm.cl/" id="l">ICMCONSTRUCTORA.CL</a></li>
           </ul>
         </div>
 
