Modificacion texto servicio hogar basico

--- a/index.html
+++ b/index.html
@@ -169,12 +169,15 @@ cambios y reparación de pisos, renovación interior y exterior para muros, coci
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Servicio Eco Hogar Básico<i class="material-icons right">close</i></span>
+              <p>Ofrecemos a nuestros clientes servicios de limpieza, posibilidad de cotizar por
+reparaciones y mejoras. Opciones:</p>
               <ul class="">
-                <li class="">•  Limpieza en habitaciones y sala de estar</li>
-                <li class="">•  Desinfección con sistema a vapor en Baños</li>
-                <li class="">•  Desinfección y remoción de grasa con sistema a vapor en cocina</li>
-                <li class="">•  Remoción de polvo, y aspirado de alfombras</li>
-                <li class="">•  Incluye uso productos ecofriendly y biodegradables</li>
+                <li class="">•  Uso de productos 100% biodegradables.</li>
+                <li class="">•  Uso de máquinas de vapor.</li>
+                <li class="">•  Limpieza de muebles, baños y cocina.</li>
+                <li class="">•  Limpieza interior de vidrios y ventanales.</li>
+                <li class="">•  Aspirado muebles y alfombras.</li>
+                <li class="">•  Cotización de reparaciones y mejoras.</li>
               </ul>
               <div class="col s12 center">
                 <p></p>
